adding sass styling todo list

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
     
     <div class="container">
-        <h1>To-Do List</h1>
-        <div id="insert">
-            <i class="far fa-plus-square fa-2x"></i>
+        <div class="heading">
+            <h1>To-Do List</h1>
+            <div id="insert">
+                <i class="far fa-plus-square fa-2x"></i>
+            </div>
         </div>
         <div id="todoInput">
-            <input type="text" name="mytodo" id="mytodo">
+            <input type="text" name="mytodo" id="mytodo" placeholder="Create New To-Do">
             <button id="btnTodo">Add</button>
         </div>
         <div id="todos">
