--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 <body>
     
     <div class="container">
+        <div class="instruction">
+            <p>Instructions: Track Your Work Schedule. <br>
+                Type your task and click on <span>add button</span>.
+                To untrack your task, just <span>single click</span>  Or <span>single tap</span>.
+                To <span>remove</span> your task, just <span>double click</span> Or <span>double tap</span>.
+            </p>
+        </div>
         <div class="heading">
             <h1>To-Do List</h1>
             <div id="insert">
