adding some style on Instructions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="container">
         <div class="instruction">
-            <p>Instructions: Track Your Work Schedule. <br>
+            <p><span>Instructions:</span> Track Your Work Schedule. <br>
                 Type your task and click on <span>add button</span>.
                 To untrack your task, just <span>single click</span>  Or <span>single tap</span>.
                 To <span>remove</span> your task, just <span>double click</span> Or <span>double tap</span>.
